<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/img_gameMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/game_txt_player_status"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/game_txt_player_goods"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/game_txt_map_message"
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/game_txt_system"
                android:gravity="right"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_space"
            android:orientation="horizontal"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/img_place_1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_6"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_7"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_8"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_9"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_10"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_11"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_12"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_13"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_14"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/game_btn_hit_b"
                android:layout_weight="2"
                android:text="@string/game_btn_caption_attack"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/game_btn_define_b"
                android:layout_weight="2"
                android:text="@string/game_btn_caption_define"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/game_txt_tips_b"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="2.5"
                android:id="@+id/game_btn_backward_b"
                android:text="@string/game_btn_caption_backward"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="2.5"
                android:id="@+id/game_btn_forward_b"
                android:text="@string/game_btn_caption_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_space_p"
            android:orientation="horizontal"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/img_place_p_1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_6"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_7"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_8"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_9"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_10"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_11"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_12"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_13"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_place_p_14"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/game_btn_hit"
                android:layout_weight="2"
                android:text="@string/game_btn_caption_attack"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/game_btn_define"
                android:layout_weight="2"
                android:text="@string/game_btn_caption_define"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/game_txt_tips"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="2.5"
                android:id="@+id/game_btn_backward"
                android:text="@string/game_btn_caption_backward"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="2.5"
                android:id="@+id/game_btn_forward"
                android:text="@string/game_btn_caption_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>